src/objects/Commission_Plan_Member__c.object
<CustomObject>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commission_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Plan__c</fullName>
        <label>Commission Plan</label>
        <referenceTo>Commission_Plan__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_for_Previous_Gross_Commissions__c</fullName>
        <inlineHelpText>Enter the date to use when figuring out how to apply the Previous Gross Commissions. In most cases this will be today&apos;s date so that the gross commissions are used to calculate net commissions for everything from today forward for the current FY.</inlineHelpText>
        <label>Date for Previous Gross Commissions</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Gross_Commissions__c</fullName>
        <inlineHelpText>Enter any Gross Commissions paid that were not tracked in Apto. This will ensure that future Net Commissions are calculated correctly.</inlineHelpText>
        <label>Previous Gross Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission Plan Member</label>
    <nameField>
        <displayFormat>CPM-{00000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Plan Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>